# ChangeLog for sci-biology/perlprimer
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*perlprimer-1.1.17 (30 Apr 2009)

  30 Apr 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  -perlprimer-1.1.14.ebuild, +perlprimer-1.1.17.ebuild, -files/gcg.801,
  +metadata.xml:
  cleaned up ebuild
  Added ~x86 as requested in bug 231230
  removed redundant database
