@@ -1,1 +1,1 @@
-DIST perlprimer-1.1.17.tar.bz2 355360 SHA256 7325af199744bdbffd499186548f66b82a96898277d88d2fd2df1852bfa19f3c
+DIST perlprimer-1.1.21.tar.bz2 356704 SHA256 19fe2202c18ad65a05d7b90ef642103e9db8e6993fe76d87c7c7cc3586e4fd20 SHA512 1dde619ad60c38454c29ff735d8765692319004d2de3de3e0ff2ded409c37151f326be93fd3283d9d9a5dcfd284c563c0a0fd16006fdd5dbcd9f4dbc355290c5 WHIRLPOOL 57f10b71767b4534744d367d0240f7eadbb38e0eeaaeec4574091e7aa3d924a1bda74f504177cec832067f1e24168390265c51a497ca1f61fb4ac4d285b359ec
