@@ -2,6 +2,8 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+EAPI=5
+
 DESCRIPTION="GUI application written in Perl to design primers for standard PCR, bisulphite PCR and Real-time PCR"
 HOMEPAGE="http://perlprimer.sourceforge.net/"
 SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
@@ -12,16 +14,14 @@ KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 DEPEND=""
-RDEPEND="dev-perl/perl-tk
+RDEPEND="
+	dev-perl/perl-tk
 	dev-perl/libwww-perl
 	>=sci-biology/rebase-904"
 
-src_unpack() {
-
-	unpack ${A}
-	cd "${S}"
-	sed -e \
-		"s:\(\"\$HOME\".\"gcg.*\"\):\"/usr/share/rebase/gcg.*\":g" \
+src_prepare() {
+	sed \
+		-e "s:\(\"\$HOME\".\"gcg.*\"\):\"/usr/share/rebase/gcg.*\":g" \
 		-i perlprimer.pl || die "Sed failed!"
 }
 
@@ -29,7 +29,8 @@ src_unpack() {
 # see if upstream still exists, point them at the new gcg file.
 
 src_install() {
-	newbin perlprimer.pl ${PN} || die
+	newbin perlprimer.pl ${PN}
 	dodoc Changelog  ReadMe.txt
-	dohtml -r tutorial_files tutorial.html
+	docinto html
+	dodoc -r tutorial_files tutorial.html
 }
