@@ -1,6 +1,10 @@
 # ChangeLog for sci-biology/perlprimer
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  10 Nov 2014; Justin Lecher <jlec@gentoo.org> -perlprimer-1.1.17.ebuild,
+  +perlprimer-1.1.21.ebuild, metadata.xml:
+  Bump to EAPI=5; Version Bump
 
 *perlprimer-1.1.17 (30 Apr 2009)
 
